# peepmatic

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/automata/: Cargo.toml
crates/automata/src/: dot.rs  lib.rs  serde_impls.rs
crates/fuzzing/: Cargo.toml
crates/fuzzing/src/: automata.rs  compile.rs  interp.rs  lib.rs
crates/macro/src/: lib.rs  operator.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cc.rs  error.rs  integer_interner.rs  lib.rs  linear.rs  operator.rs  optimizations.rs  optimizer.rs  paths.rs  type.rs
crates/test/src/: lib.rs
examples/: preopt.peepmatic
fuzz/: Cargo.toml
src/: ast.rs  automatize.rs  dot_fmt.rs  lib.rs  linear_passes.rs  linearize.rs  parser.rs  traversals.rs  verify.rs
