[package]
name = "peepmatic-runtime"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.2.0"
serde = { version = "1.0.105", features = ["derive"] }
