[package]
name = "peepmatic-runtime"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.2.0"
peepmatic-automata = { version = "0.1.0", path = "../automata", features = ["serde"] }
peepmatic-macro = { version = "0.1.0", path = "../macro" }
serde = { version = "1.0.105", features = ["derive"] }
wast = { version = "13.0.0", optional = true }


[features]
# Enable support for a few extra methods that are required by the `peepmatic`
# crate when constructing peephole optimizers, but are not needed when simply
# using already-constructed peephole optimizers.
construct = ["wast"]
